--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
   "dependencies": {
     "browser-sync": "^2.26.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "node-sass": "^4.9.4",
+    "npm-run-all": "^4.1.3"
+  },
   "scripts": {
-    "browser-sync": "browser-sync start --server --files index.html styles.css"
-},
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "browser-sync": "browser-sync start --server --files index.html styles.css",
+    "sass": "node-sass --source-map-embed styles.scss styles.css",
+    "sass-watch": "node-sass --source-map-embed --watch *.scss --recursive styles.css",
+    "dev": "npm-run-all --parallel sass browser-sync sass-watch"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hrafnhilduro/hopverkefni1.git"
