--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
   },
   "devDependencies": {
     "node-sass": "^4.9.4",
-    "npm-run-all": "^4.1.3"
+    "npm-run-all": "^4.1.3",
+    "stylelint": "^9.6.0",
+    "stylelint-config-primer": "^2.2.11"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "browser-sync": "browser-sync start --server --files index.html styles.css",
     "sass": "node-sass --source-map-embed styles.scss styles.css",
     "sass-watch": "node-sass --source-map-embed --watch *.scss --recursive styles.css",
-    "dev": "npm-run-all --parallel sass browser-sync sass-watch"
+    "dev": "npm-run-all --parallel sass browser-sync sass-watch",
+    "lint-css": "stylelint styles.css --syntax css",
+    "lint-scss": "stylelint styles.scss --syntax scss"
   },
   "repository": {
     "type": "git",
